<resources>
    <string name="app_name">Ejeep</string>


    <!-- DRIVER Activity -->
    <string name="MenuDriver">SELECT DRIVER</string>
    <string name="D1">ALEJANDRO ACILO</string>
    <string name="D2">ALEXIS ACILO</string>
    <string name="D3">AL-HAMAD TENG</string>
    <string name="D4">ALIMUDIN ALANGO</string>
    <string name="D5">AMIR HARISS U. TALAGUIA</string>
    <string name="D6">CARIM GUINTAWAN</string>
    <string name="D7">ERLYN JUN CONARCO</string>
    <string name="D8">JASPHER GALLARDO</string>
    <string name="D9">JOEY VILLARIN</string>
    <string name="D10">JOHAIDEN MADI</string>
    <string name="D11">JUNFRED ARENDAIN</string>
    <string name="D12">LITO J. NOVENO</string>
    <string name="D13">MARCELINO DISO</string>
    <string name="D14">MOCTAR KAMAL</string>
    <string name="D15">NELSON A. CASIPE</string>
    <string name="D16">NIELMARK A. CASIPE</string>
    <string name="D17">NONITO GALLARDO</string>
    <string name="D18">RENATO PAMASANG</string>
    <string name="D19">REYNALDO J. LIMBAGA</string>
    <string name="D20">RUBEN LAUREL</string>
    <string name="D21">SAUDI KUSAIN</string>
    <string name="D22">SANDATU ANAB</string>
    <string name="D23">SUHARTO MADI</string>
    <string name="D24">TEN ANAB</string>
    <string name="D25">TEODORO D. CATAAN</string>

    <!-- END of DRIVER Activity -->


    <!-- START of BODYNUMBER Activity -->
    <string name="F001">Vehicle BodyNumber</string>
    <string name="F01">F-01</string>
    <string name="F02">F-02</string>
    <string name="F03">F-03</string>
    <string name="F04">F-04</string>
    <string name="F05">F-05</string>
    <string name="F06">F-06</string>
    <string name="F07">F-07</string>
    <string name="F08">F-08</string>
    <string name="F09">F-09</string>
    <string name="F10">F-10</string>
    <string name="F11">F-11</string>
    <string name="F12">F-12</string>
    <string name="F13">F-13</string>
    <string name="F14">F-14</string>
    <string name="F15">F-15</string>
    <string name="F16">F-16</string>

    <!-- END of BODYNUMBER Activity -->

    <!-- START of TRIP Activity -->
    <string name="T001">Trip Number</string>

    <string name="T1">01</string>
    <string name="T2">02</string>
    <string name="T3">03</string>
    <string name="T4">04</string>
    <string name="T5">05</string>
    <string name="T6">06</string>
    <string name="T7">07</string>
    <string name="T8">08</string>
    <string name="T9">09</string>
    <string name="T10">10</string>

    <!-- END of TRIP Activity -->

    <!-- FARE AMOUNT  -->
    <string name="Fare">FARE</string>
    <string name="F1">50</string>
    <string name="F2">45</string>
    <string name="F3">40</string>
    <string name="F4">35</string>
    <string name="F5">30</string>
    <string name="F6">25</string>
    <string name="F7">20</string>
    <string name="F8">15</string>
    <string name="F9">10</string>
    <string name="VIEW">VIEW</string>
    <string name="SAVE">SAVE</string>

    <!-- FARE AMOUNT  -->


</resources>