<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripNumber">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/T001"
            android:paddingTop="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center">

        </TextView>

        <Button
            android:id="@+id/T1"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/T2"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T2"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/T3"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/T4"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T4"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/T5"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T5"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/T6"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T6"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>        <Button
        android:id="@+id/T7"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/T7"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp">

    </Button>
        <Button
            android:id="@+id/T8"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T8"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/T9"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T9"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/T10"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/T10"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

        </Button>





    </LinearLayout>

</ScrollView>